--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,13 @@
 			</plugin>
 		</plugins>
 	</build>
-
 	<dependencies>
 		<dependency>
 			<groupId>asm</groupId>
-			<artifactId>asm</artifactId>
-			<version>3.3.1</version>
+			<artifactId>asm-all</artifactId>
+			<version>3.1</version>
 		</dependency>
 	</dependencies>
+
+
 </project>
