--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
 			<artifactId>jersey-json</artifactId>
 			<version>1.9</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.dbws.builder</artifactId>
+			<version>2.5.2</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 </project>
