--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
 			<version>2.5.2</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>6.0</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
