--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
 			<version>6.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava-collections</artifactId>
+			<version>r03</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
