--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.feedback</groupId>
 	<artifactId>feedback-oulu</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>feedback-oulu</name>
 	<url>http://maven.apache.org</url>
