--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>javax.persistence</artifactId>
-			<version>2.1.0</version>
+			<artifactId>eclipselink</artifactId>
+			<version>2.5.2</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
