--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,9 @@
 			<version>9.3-1102-jdbc41</version>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>eclipselink</artifactId>
-			<version>2.5.2</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.7.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
