--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,18 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging</artifactId>
+			<version>3.0.0.CR1</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
-
 
 	<repositories>
 		<!-- Used for some Java EE 6 pieces -->
