--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,5 +2,5 @@ log4j.logger.org.hibernate=INFO, hb
 log4j.logger.org.hibernate.SQL=DEBUG
 log4j.logger.org.hibernate.type=TRACE
 
-log4j.appender.hb=org.apache.log4j.ConsoleAppender
-log4j.appender.hb.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
