--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,14 @@
-#Log to Console as STDOUT
+# Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c %3x - %m%n
-
-#Root Logger
-log4j.rootLogger=INFO, stdout, file
+log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+ 
+# Root logger option
+log4j.rootLogger=INFO, file, stdout
+ 
+# Log everything. Good for troubleshooting
+log4j.logger.org.hibernate=INFO
+ 
+# Log all JDBC parameters
+log4j.logger.org.hibernate.type=ALL
