--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,10 +5,10 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
  
 # Root logger option
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=DEBUG, stdout
  
 # Log everything. Good for troubleshooting
-log4j.logger.org.hibernate=INFO
+log4j.logger.org.hibernate=DEBUG
  
 # Log all JDBC parameters
 log4j.logger.org.hibernate.type=ALL
